@@ -48,6 +48,7 @@ import org.xml.sax.SAXException;
 import org.xml.sax.SAXParseException;
 import org.xml.sax.XMLReader;
 
+import javax.annotation.Nullable;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
@@ -59,7 +60,6 @@ import javax.xml.transform.sax.TransformerHandler;
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Enumeration;
 import java.util.Optional;
 import java.util.Properties;
@@ -74,6 +74,7 @@ import static java.nio.charset.StandardCharsets.UTF_8;
  */
 public class XSLTServlet extends HttpServlet {
 
+    @Serial
     private static final long serialVersionUID = -7258405385386062151L;
 
     private final static String REQ_ATTRIBUTE_PREFIX = "xslt.";
@@ -135,8 +136,8 @@ public class XSLTServlet extends HttpServlet {
                     }
                 }
 
-                if (sourceObj instanceof Item) {
-                    inputNode = (Item) sourceObj;
+                if (sourceObj instanceof Item item) {
+                    inputNode = item;
                     if (!Type.subTypeOf(inputNode.getType(), Type.NODE)) {
                         throw new ServletException("Input for XSLT servlet is not a node. Read from attribute " +
                                 sourceAttrib);
@@ -229,7 +230,8 @@ public class XSLTServlet extends HttpServlet {
                 } else if (uri.startsWith("xmldb:exist://")) {
                     baseUri = XmldbURI.xmldbUriFor(uri).getCollectionPath();
                 } else {
-                    baseUri = getCurrentDir(request).toAbsolutePath().toString();
+                    final Path currentDir = getCurrentDir(request);
+                    baseUri = currentDir == null ? null : currentDir.toAbsolutePath().toString();
                 }
                 xinclude.setModuleLoadPath(baseUri);
 
@@ -299,7 +301,7 @@ public class XSLTServlet extends HttpServlet {
         if (stylesheet.indexOf(':') == Constants.STRING_NOT_FOUND) {
             // replace double slash
             stylesheet = stylesheet.replaceAll("//", "/");
-            Path f = Paths.get(stylesheet).normalize();
+            Path f = Path.of(stylesheet).normalize();
             if (Files.isReadable(f)) {
                 // Found file, get URI
                 stylesheet = f.toUri().toASCIIString();
@@ -316,12 +318,18 @@ public class XSLTServlet extends HttpServlet {
                         return null;
                     }
 
-                    f = Paths.get(url);
+                    f = Path.of(url);
                     stylesheet = f.toUri().toASCIIString();
 
                 } else {
                     // relative path is relative to the current working directory
-                    f = getCurrentDir(request).resolve(stylesheet);
+                    final Path currentDir = getCurrentDir(request);
+                    if (currentDir == null) {
+                        response.sendError(HttpServletResponse.SC_NOT_FOUND,
+                                "Stylesheet not found (URL: " + stylesheet + ")");
+                        return null;
+                    }
+                    f = currentDir.resolve(stylesheet);
                     stylesheet = f.toUri().toASCIIString();
                 }
 
@@ -339,7 +347,8 @@ public class XSLTServlet extends HttpServlet {
     /*
      * Please explain what this method is about. Write about assumptions / input.
      */
-    private Path getCurrentDir(HttpServletRequest request) {
+    // package-private rather than private so it is directly testable without reflection
+    @Nullable Path getCurrentDir(HttpServletRequest request) {
         String path = request.getPathTranslated();
         if (path == null) {
             path = request.getRequestURI().substring(request.getContextPath().length());
@@ -348,9 +357,15 @@ public class XSLTServlet extends HttpServlet {
                 path = path.substring(0, p);
             }
             path = getServletContext().getRealPath(path);
+            // the Servlet API permits both getPathTranslated() and getRealPath() to return null
+            // when the container cannot map the request to a location on disk (e.g. a request
+            // forwarded to a database-only resource); there is no directory to report.
+            if (path == null) {
+                return null;
+            }
         }
 
-        final Path file = Paths.get(path).normalize();
+        final Path file = Path.of(path).normalize();
         if (Files.isDirectory(file)) {
             return file;
         } else {
