@@ -43,7 +43,6 @@ import org.junit.runner.Runner;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -65,7 +64,20 @@ public abstract class AbstractTestRunner extends Runner {
         this.parallel = parallel;
     }
 
+    /**
+     * Returns the path to the test file (XQuery or XML). Used for hang reporting and diagnostics.
+     *
+     * @return the source path of the test file
+     */
+    public Path getSourcePath() {
+        return path;
+    }
+
     protected static Sequence executeQuery(final BrokerPool brokerPool, final Source query, final List<Function<XQueryContext, Tuple2<String, Object>>> externalVariableBindings) throws EXistException, PermissionDeniedException, XPathException, IOException, DatabaseConfigurationException {
+        return executeQuery(brokerPool, query, externalVariableBindings, null);
+    }
+
+    protected static Sequence executeQuery(final BrokerPool brokerPool, final Source query, final List<Function<XQueryContext, Tuple2<String, Object>>> externalVariableBindings, @javax.annotation.Nullable final Path moduleLoadPath) throws EXistException, PermissionDeniedException, XPathException, IOException, DatabaseConfigurationException {
 	final SecurityManager securityManager = requireNonNull(brokerPool.getSecurityManager(), "securityManager is null");
         try (final DBBroker broker = brokerPool.get(Optional.of(securityManager.getSystemSubject()))) {
             final XQueryPool queryPool = brokerPool.getXQueryPool();
@@ -82,9 +94,11 @@ public abstract class AbstractTestRunner extends Runner {
 
                 // setup misc. context
                 context.setBaseURI(new AnyURIValue("/db"));
-                if(query instanceof FileSource) {
-                    final Path queryPath = Paths.get(((FileSource) query).getPath().toAbsolutePath().toString());
-                    if(Files.isDirectory(queryPath)) {
+                if (moduleLoadPath != null) {
+                    context.setModuleLoadPath(moduleLoadPath.toAbsolutePath().toString());
+                } else if (query instanceof FileSource source) {
+                    final Path queryPath = Path.of(source.getPath().toAbsolutePath().toString());
+                    if (Files.isDirectory(queryPath)) {
                         context.setModuleLoadPath(queryPath.toString());
                     } else {
                         context.setModuleLoadPath(queryPath.getParent().toString());
@@ -119,7 +133,7 @@ public abstract class AbstractTestRunner extends Runner {
         }
     }
 
-    protected static String checkDescription(Object source,  String description) {
+    protected static String checkDescription(final Object source, final String description) {
         if (description == null) {
             throw new IllegalArgumentException(source + " description is null");
         }
