@@ -28,7 +28,7 @@ import org.junit.runners.model.InitializationError;
 
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -41,25 +41,25 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 class XQueryTestRunnerTest {
     @Test
     void testGetDescription() throws URISyntaxException, InitializationError {
-        final URL queryUrl = getClass().getResource("single-test.xq");
-        final XQueryTestRunner runner = new XQueryTestRunner(Paths.get(queryUrl.toURI()), false);
+        final URL queryUrl = getClass().getResource("single-test.xqm");
+        final XQueryTestRunner runner = new XQueryTestRunner(Path.of(queryUrl.toURI()), false);
         final Description description = runner.getDescription();
         assertNotNull(description);
         assertTrue(description.isSuite());
-        assertEquals(true, description.getAnnotations().isEmpty());
+        assertTrue(description.getAnnotations().isEmpty());
         assertEquals("xqts.org.exist-db.xquery.single-test-module", description.getDisplayName());
         assertEquals(1, description.testCount());
     }
 
     @Test
      void testGetDescriptionWhenNoTests() throws URISyntaxException, InitializationError {
-        final URL queryUrl = getClass().getResource("no-tests.xq");
-        final XQueryTestRunner runner = new XQueryTestRunner(Paths.get(queryUrl.toURI()), false);
+        final URL queryUrl = getClass().getResource("no-tests.xqm");
+        final XQueryTestRunner runner = new XQueryTestRunner(Path.of(queryUrl.toURI()), false);
         final Description description = runner.getDescription();
         assertNotNull(description);
         assertFalse(description.isSuite());
-        assertEquals(true, description.getAnnotations().isEmpty());
-        assertEquals("no-tests.xq", description.getDisplayName());
+        assertTrue(description.getAnnotations().isEmpty());
+        assertEquals("no-tests.xqm", description.getDisplayName());
         assertEquals(1, description.testCount());
     }
 }
