@@ -22,8 +22,8 @@
 package org.exist.util;
 
 import java.net.URISyntaxException;
+import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.junit.Assert.*;
 
@@ -49,7 +49,7 @@ public class MimeTableTest  {
 	 */
     @Test
 	public void testDistributionVersionOfMimeTypesXml() throws URISyntaxException {
-		final Path mimeTypes = Paths.get(getClass().getResource("mime-types.xml").toURI());
+		final Path mimeTypes = Path.of(getClass().getResource("mime-types.xml").toURI());
 
 		MimeTable mimeTable = new MimeTable(mimeTypes);
 		assertNotNull("Mime table not found", mimeTable);
@@ -84,7 +84,7 @@ public class MimeTableTest  {
 	 */
     @Test
 	public void testWithDefaultResourceTypeFeature() throws URISyntaxException {
-		final Path mimeTypes = Paths.get(getClass().getResource("mime-types-xml-default.xml").toURI());
+		final Path mimeTypes = Path.of(getClass().getResource("mime-types-xml-default.xml").toURI());
 
 		MimeTable mimeTable = new MimeTable(mimeTypes);
 		assertNotNull("Mime table not found", mimeTable);
@@ -123,7 +123,7 @@ public class MimeTableTest  {
 	 */
     @Test
 	public void testWithDefaultMimeTypeFeature() throws URISyntaxException {
-		final Path mimeTypes = Paths.get(getClass().getResource("mime-types-foo-default.xml").toURI());
+		final Path mimeTypes = Path.of(getClass().getResource("mime-types-foo-default.xml").toURI());
 
 		MimeTable mimeTable = new MimeTable(mimeTypes);
 		assertNotNull("Mime table not found", mimeTable);
@@ -154,5 +154,32 @@ public class MimeTableTest  {
 		assertNotNull("Mime type not found for test.jpg", mt);
 		assertEquals("Incorrect mime type", "foo/bar", mt.getName());
 		assertEquals("Incorrect resource type", MimeType.BINARY, mt.getType());
+	}
+
+	@Test
+	public void testClasspathDefaultIncludesApplicationXquery() {
+		final MimeTable mimeTable = new MimeTable();
+		final MimeType xquery = mimeTable.getContentType("application/xquery");
+		assertNotNull("application/xquery must be registered in the default mime-types.xml", xquery);
+		assertEquals("application/xquery", xquery.getName());
+	}
+
+	@Test
+	public void testUnreadablePathThrows() {
+		final Path missing = Path.of("/nonexistent/mime-types-does-not-exist.xml");
+		final IllegalStateException ex = assertThrows(IllegalStateException.class, () -> new MimeTable(missing));
+		assertTrue(ex.getMessage().contains("not readable"));
+	}
+
+	@Test
+	public void testInvalidXmlThrows() throws Exception {
+		final Path broken = Files.createTempFile("mime-types-broken", ".xml");
+		try {
+			Files.writeString(broken, "<not-valid-xml");
+			final IllegalStateException ex = assertThrows(IllegalStateException.class, () -> new MimeTable(broken));
+			assertTrue(ex.getMessage().contains("Failed to load mime-type table"));
+		} finally {
+			Files.deleteIfExists(broken);
+		}
 	}
 }
