@@ -22,8 +22,10 @@
 package org.exist.indexing.lucene;
 
 import java.io.Reader;
+import java.io.Serial;
 import java.lang.invoke.*;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
@@ -31,22 +33,17 @@ import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 
-import org.apache.commons.lang3.StringUtils;
-
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import org.apache.lucene.analysis.Analyzer;
 import org.apache.lucene.analysis.standard.StandardAnalyzer;
-import org.apache.lucene.analysis.util.CharArraySet;
-import org.apache.lucene.util.Version;
+import org.apache.lucene.analysis.CharArraySet;
 
 import org.exist.collections.CollectionConfiguration;
 import org.exist.util.DatabaseConfigurationException;
 
 import org.w3c.dom.Element;
-import org.w3c.dom.NamedNodeMap;
-import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
 import static java.lang.invoke.MethodType.methodType;
@@ -66,7 +63,7 @@ public class AnalyzerConfig {
      </analyzer>
 
      <analyzer id="stdstops" class="org.apache.lucene.analysis.standard.StandardAnalyzer">
-     ..<param name="stopwords" type="java.util.Set">
+     ..<param name="stopwords" type="set">
      ....<value>the</value>
      ....<value>this</value>
      ....<value>and</value>
@@ -76,7 +73,7 @@ public class AnalyzerConfig {
 
      <analyzer id="sbstops" class="org.apache.lucene.analysis.snowball.SnowballAnalyzer">
      ..<param name="name" value="English"/>
-     ..<param name="stopwords" type="java.util.Set">
+     ..<param name="stopwords" type="org.apache.lucene.analysis.CharArraySet">
      ....<value>the</value>
      ....<value>this</value>
      ....<value>and</value>
@@ -96,52 +93,8 @@ public class AnalyzerConfig {
     private static final String PARAM_VALUE_ENTRY = "value";
     private static final String PARAM_ELEMENT_NAME = "param";
 
-    private Map<String, Analyzer> analyzers = new TreeMap<>();
+    private final Map<String, Analyzer> analyzers = new TreeMap<>();
     private Analyzer defaultAnalyzer = new StandardAnalyzer();
-
-    public Analyzer getAnalyzerById(String id) {
-        return analyzers.get(id);
-    }
-
-    public Analyzer getDefaultAnalyzer() {
-        return defaultAnalyzer;
-    }
-
-    /**
-     * Parse {@code <analyzer/>} element and register configured analyzer.
-     *
-     * @param config The analyzer element from .xconf file.
-     *
-     * @throws DatabaseConfigurationException Something unexpected happened.
-     */
-    public void addAnalyzer(Element config) throws DatabaseConfigurationException {
-
-        // Configure lucene analuzer with configuration
-        final Analyzer analyzer = configureAnalyzer(config);
-        if (analyzer == null) {
-            return;
-        }
-
-        // Get (optional) id-attribute of analyzer
-        final String id = config.getAttribute(ID_ATTRIBUTE);
-
-        // If no ID is provided, register as default analyzer
-        // else register analyzer
-        if (StringUtils.isBlank(id)) {
-            setDefaultAnalyzer(analyzer);
-        } else {
-            analyzers.put(id, analyzer);
-        }
-    }
-
-    /**
-     * Set default the analyzer.
-     *
-     * @param analyzer Lucene analyzer
-     */
-    public void setDefaultAnalyzer(Analyzer analyzer) {
-        defaultAnalyzer = analyzer;
-    }
 
     /**
      * Parse {@code <analyzer/>} element from xconf and initialize an analyzer with the
@@ -149,97 +102,62 @@ public class AnalyzerConfig {
      *
      * @param config The analyzer element
      * @return Initialized Analyzer object
-     *
-     * @throws DatabaseConfigurationException Something unexpected happened.
      */
-    protected static Analyzer configureAnalyzer(Element config) throws DatabaseConfigurationException {
+    protected static Analyzer configureAnalyzer(Element config) {
 
-        // Get classname from attribute
+        // Get class name from attribute
         final String className = config.getAttribute(CLASS_ATTRIBUTE);
-
-        Analyzer newAnalyzer = null;
-
-        if (StringUtils.isBlank(className)) {
-            // No classname is defined.
+        if (className.isBlank()) {
+            // No class name is defined.
             LOG.error("Missing class attribute or attribute is empty.");
             // DW: throw exception?
-
-        } else {
-            // Classname is defined.
-
-            // Probe class
-            final Class<?> untypedClazz;
-            try {
-                untypedClazz = Class.forName(className);
-
-            } catch (ClassNotFoundException e) {
-                LOG.error(String.format("Lucene index: analyzer class %s not found. (%s)", className, e.getMessage()));
-                return null;
-            }
-
-            // CHeck if class is an Analyzer
-            if (!Analyzer.class.isAssignableFrom(untypedClazz)) {
-                LOG.error(String.format("Lucene index: analyzer class has to be a subclass of %s", Analyzer.class.getName()));
-                return null;
-            }
-
-            final Class<? extends Analyzer> clazz = (Class<? extends Analyzer>) untypedClazz;
-
-            // Get list of parameters
-            List<KeyTypedValue<?>> cParams;
-            try {
-                cParams = getAllConstructorParameters(config);
-
-            } catch (ParameterException pe) {
-                // Unable to parse parameters.
-                LOG.error(String.format("Unable to get parameters for %s: %s", className, pe.getMessage()), pe);
-                cParams = new ArrayList<>();
-            }
-
-            // Iterate over all parameters, convert data to two arrays
-            // that can be used in the reflection code
-            final Class<?> cParamClasses[] = new Class<?>[cParams.size()];
-            final Object cParamValues[] = new Object[cParams.size()];
-            for (int i = 0; i < cParams.size(); i++) {
-                KeyTypedValue<?> ktv = cParams.get(i);
-                cParamClasses[i] = ktv.valueClass();
-                cParamValues[i] = ktv.value();
-            }
-
-            // Create new analyzer
-            if (cParamClasses.length > 0 && cParamClasses[0] == Version.class) {
-
-                if (LOG.isDebugEnabled()) {
-                    Version version = (Version) cParamValues[0];
-                    LOG.debug(String.format("An explicit Version %s of lucene has been specified.", version.toString()));
-                }
-
-                // A lucene Version object has been provided, so it shall be used
-                newAnalyzer = createInstance(clazz, cParamClasses, cParamValues, false);
-
-            } else {
-                // Either no parameters have been provided, or more than one parameter
-
-                // Extend arrays with (default) Version object info, add to front.
-                Class<?>[] vcParamClasses = addVersionToClasses(cParamClasses);
-                Object[] vcParamValues = addVersionValueToValues(cParamValues);
-
-                // Finally create Analyzer
-                newAnalyzer = createInstance(clazz, vcParamClasses, vcParamValues, true);
-
-                // Fallback scenario: a special (not standard type of) Analyzer has been specified without 
-                // a 'Version' argument on purpose. For this (try) to create the Analyzer with 
-                // the original parameters.
-                if (newAnalyzer == null) {
-                    newAnalyzer = createInstance(clazz, cParamClasses, cParamValues, false);
-                }
-
-            }
-
+            return null;
         }
 
+        // Class name is defined.
+        // Probe class
+        final Class<?> untypedClazz;
+        try {
+            untypedClazz = Class.forName(className);
+        } catch (ClassNotFoundException e) {
+            LOG.error("Lucene index: analyzer class {} not found. ({})", className, e.getMessage());
+            return null;
+        }
+
+        // Check if class is an Analyzer
+        if (!Analyzer.class.isAssignableFrom(untypedClazz)) {
+            LOG.error("Lucene index: analyzer class has to be a subclass of {}", Analyzer.class.getName());
+            return null;
+        }
+
+        final Class<? extends Analyzer> clazz = (Class<? extends Analyzer>) untypedClazz;
+
+        // Get list of parameters
+        List<KeyTypedValue<?>> cParams;
+        try {
+            cParams = getAllConstructorParameters(config);
+        } catch (ParameterException pe) {
+            // Unable to parse parameters.
+            LOG.error("Unable to get parameters for {}: {}", className, pe.getMessage(), pe);
+            cParams = new ArrayList<>();
+        }
+
+        // Iterate over all parameters, convert data to two arrays
+        // that can be used in the reflection code
+        final Class<?>[] cParamClasses = new Class<?>[cParams.size()];
+        final Object[] cParamValues = new Object[cParams.size()];
+        for (int i = 0; i < cParams.size(); i++) {
+            KeyTypedValue<?> ktv = cParams.get(i);
+            cParamClasses[i] = ktv.valueClass();
+            cParamValues[i] = ktv.value();
+        }
+
+        // Create new analyzer
+        // Note: Lucene 10 removed Version constants (LUCENE_4_*, etc.). Analyzers no longer take Version.
+        final Analyzer newAnalyzer = createInstance(clazz, cParamClasses, cParamValues, false);
+
         if (newAnalyzer == null) {
-            LOG.error(String.format("Unable to create analyzer '%s'", className));
+            LOG.error("Unable to create analyzer '{}'", className);
         }
 
         return newAnalyzer;
@@ -255,7 +173,7 @@ public class AnalyzerConfig {
      * @return The lucene analyzer
      */
     static <T extends Analyzer> T createInstance(final Class<T> clazz, final Class<?>[] vcParamClasses,
-        final Object[] vcParamValues, final boolean warnOnError) {
+                                                 final Object[] vcParamValues, final boolean warnOnError) {
 
         final String className = clazz.getName();
 
@@ -267,23 +185,27 @@ public class AnalyzerConfig {
         try {
             final MethodHandle methodHandle = LOOKUP.findConstructor(clazz, constructorType);
             if (LOG.isDebugEnabled()) {
-                LOG.debug(String.format("Using analyzer %s", className));
+                LOG.debug("Using analyzer {}", className);
             }
             return (T) methodHandle.invokeWithArguments(vcParamValues);
         } catch (final NoSuchMethodException e) {
-            final String message = String.format("Could not find matching analyzer class constructor %s: %s", className, e.getMessage());
+            final String message = "Could not find matching analyzer class constructor %s: %s".formatted(className, e.getMessage());
+            if (warnOnError) {
+                LOG.warn("{}. Will retry...", message);
+            } else {
+                LOG.error(message, e);
+            }
+        } catch (final InterruptedException e) {
+            // NOTE: must set interrupted flag
+            Thread.currentThread().interrupt();
+            final String message = "Exception while instantiating analyzer class %s: %s".formatted(className, e.getMessage());
             if (warnOnError) {
                 LOG.warn("{}. Will retry...", message);
             } else {
                 LOG.error(message, e);
             }
         } catch (final Throwable e) {
-            if (e instanceof InterruptedException) {
-                // NOTE: must set interrupted flag
-                Thread.currentThread().interrupt();
-            }
-
-            final String message = String.format("Exception while instantiating analyzer class %s: %s", className, e.getMessage());
+            final String message = "Exception while instantiating analyzer class %s: %s".formatted(className, e.getMessage());
             if (warnOnError) {
                 LOG.warn("{}. Will retry...", message);
             } else {
@@ -294,33 +216,13 @@ public class AnalyzerConfig {
     }
 
     /**
-     * Extend list of values, add version-value to front
-     */
-    private static Object[] addVersionValueToValues(final Object[] cParamValues) {
-        final Object vcParamValues[] = new Object[cParamValues.length + 1];
-        vcParamValues[0] = LuceneIndex.LUCENE_VERSION_IN_USE;
-        System.arraycopy(cParamValues, 0, vcParamValues, 1, cParamValues.length);
-        return vcParamValues;
-    }
-
-    /**
-     * Extend list of classes, add version-class to front
-     */
-    private static Class<?>[] addVersionToClasses(final Class<?>[] cParamClasses) {
-        final Class<?> vcParamClasses[] = new Class<?>[cParamClasses.length + 1];
-        vcParamClasses[0] = Version.class;
-        System.arraycopy(cParamClasses, 0, vcParamClasses, 1, cParamClasses.length);
-        return vcParamClasses;
-    }
-
-    /**
      * Retrieve parameter info from all <param/> elements.
      *
      * @param config The <analyzer/> element from the provided configuration
      * @return List of triples key-value-valueType
-     * @throws org.exist.indexing.lucene.AnalyzerConfig.ParameterException
+     * @throws org.exist.indexing.lucene.AnalyzerConfig.ParameterException an invalid param element was found
      */
-    static List<KeyTypedValue<?>> getAllConstructorParameters(Element config) throws ParameterException {
+    static List<KeyTypedValue<?>> getAllConstructorParameters(final Element config) throws ParameterException {
         final List<KeyTypedValue<?>> parameters = new ArrayList<>();
         final NodeList params = config.getElementsByTagNameNS(CollectionConfiguration.NAMESPACE, PARAM_ELEMENT_NAME);
 
@@ -337,190 +239,158 @@ public class AnalyzerConfig {
      * information is used to construct actual data containing objects.
      *
      * @param param Element that represents <param/>
-     * @return Triple key-value-value-type
-     * @throws org.exist.indexing.lucene.AnalyzerConfig.ParameterException
+     * @return Record of key, value, and type(-class)
+     * @throws org.exist.indexing.lucene.AnalyzerConfig.ParameterException issue with parameter type or value
      */
     static KeyTypedValue<?> getConstructorParameter(final Element param) throws ParameterException {
+        // Get name of parameter, or empty string when not set
+        final String name = param.getAttribute(NAME_ATTRIBUTE);
 
-        // Get attributes
-        final NamedNodeMap attrs = param.getAttributes();
+        // Get value type information of parameter, or empty string when not set
+        final String type = param.getAttribute(TYPE_ATTRIBUTE);
 
-        // Get name of parameter, NULL when no value is present
-        Node namedItem = attrs.getNamedItem(NAME_ATTRIBUTE);
-        final String name = (namedItem == null) ? null : namedItem.getNodeValue();
+        // Get actual value from attribute, or empty string when not set
+        final String value = param.getAttribute(PARAM_VALUE_ENTRY);
 
-        // Get value type information of parameter, NULL when not available
-        namedItem = attrs.getNamedItem(TYPE_ATTRIBUTE);
-        final String type = (namedItem == null) ? null : namedItem.getNodeValue();
-
-        // Get actual value from attribute, or NULL when not available.
-        namedItem = attrs.getNamedItem(PARAM_VALUE_ENTRY);
-        final String value = (namedItem == null) ? null : namedItem.getNodeValue();
-
-        // Place holder return value
-        KeyTypedValue<?> parameter = null;
-
-        if (StringUtils.isBlank(type) || "java.lang.String".equals(type)) {
-            // String or no type is provided, assume string.
-
-            if (value == null) {
+        // String or no type is provided, assume string.
+        if (type.isBlank() || "java.lang.String".equals(type)) {
+            if (value.isEmpty()) {
                 throw new ParameterException("The 'value' attribute must exist and must contain String value.");
             }
-
-            parameter = new KeyTypedValue<>(name, value, String.class);
-
-        } else {
-            switch (type) {
-                case "java.lang.reflect.Field":
-
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a full classname.");
-                    }
-
-                    // Use reflection
-                    // - retrieve classname from the value field
-                    // - retrieve fieldname from the value field
-                    final String clazzName = value.substring(0, value.lastIndexOf('.'));
-                    final String fieldName = value.substring(value.lastIndexOf('.') + 1);
-                    try {
-                        // Retrieve value from Field
-                        final Class<?> fieldClazz = Class.forName(clazzName);
-                        final Field field = fieldClazz.getField(fieldName);
-                        field.setAccessible(true);
-                        final Object fValue = field.get(fieldClazz.newInstance());
-                        parameter = new KeyTypedValue<>(name, fValue, Object.class);
-
-                    } catch (final NoSuchFieldException | ClassNotFoundException | InstantiationException | IllegalAccessException nsfe) {
-                        throw new ParameterException(nsfe.getMessage(), nsfe);
-                    }
-                    break;
-
-                case "java.io.File": {
-
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a file name.");
-                    }
-
-                    LOG.info(String.format("Type '%s' has been deprecated in recent Lucene versions, "
-                            + "please use 'java.io.FileReader' (short 'file') instead.", type));
-
-                    parameter = new KeyTypedValue<>(name, new java.io.File(value), java.io.File.class);
-                    break;
-                }
-
-                case "java.io.FileReader":
-                case "file": {
-
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a file name.");
-                    }
-
-                    try {
-                        // ToDo: check where to close reade to prevent resource leakage
-                        Reader fileReader = new java.io.FileReader(value);
-                        parameter = new KeyTypedValue<>(name, fileReader, Reader.class);
-
-                    } catch (java.io.FileNotFoundException ex) {
-                        LOG.error(String.format("File '%s' could not be found.", value), ex);
-                    }
-                    break;
-                }
-
-                case "java.util.Set": {
-
-                    LOG.info(String.format("Type '%s' has been deprecated in recent Lucene versions, "
-                            + "please use 'org.apache.lucene.analysis.util.CharArraySet' (short 'set') instead.", type));
-
-                    final Set s = getConstructorParameterSetValues(param);
-                    parameter = new KeyTypedValue<>(name, s, Set.class);
-                    break;
-                }
-
-                case "java.lang.String[]": {
-                    final String[] ary = getConstructorParameterStringArrayValues(param);
-                    parameter = new KeyTypedValue<>(name, ary, String[].class);
-                    break;
-                }
-
-                case "char[]": {
-                    final char[] ary = getConstructorParameterCharArrayValues(param);
-                    parameter = new KeyTypedValue<>(name, ary, char[].class);
-                    break;
-                }
-
-                case "org.apache.lucene.analysis.util.CharArraySet":
-                case "set": {
-                    // This is mandatory to use iso a normal Set since Lucene 4
-                    final CharArraySet s = getConstructorParameterCharArraySetValues(param);
-                    parameter = new KeyTypedValue<>(name, s, CharArraySet.class);
-                    break;
-                }
-
-                case "java.lang.Integer":
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain an integer value.");
-                    }
-                    try {
-                        final Integer n = Integer.parseInt(value);
-                        parameter = new KeyTypedValue<>(name, n, Integer.class);
-                    } catch (final NumberFormatException ex) {
-                        LOG.error(String.format("Value %s could not be converted to an integer. %s", value, ex.getMessage()));
-                    }
-                    break;
-
-                case "int":
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain an int value.");
-                    }
-                    try {
-                        final Integer n = Integer.parseInt(value);
-                        parameter = new KeyTypedValue<>(name, n, int.class);
-                    } catch (final NumberFormatException ex) {
-                        LOG.error(String.format("Value %s could not be converted to an int. %s", value, ex.getMessage()));
-                    }
-                    break;
-
-                case "java.lang.Boolean":
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a Boolean value.");
-                    }
-                    final Boolean b1 = Boolean.parseBoolean(value);
-                    parameter = new KeyTypedValue<>(name, b1, Boolean.class);
-                    break;
-
-                case "boolean":
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a boolean value.");
-                    }
-                    final Boolean b2 = Boolean.parseBoolean(value);
-                    parameter = new KeyTypedValue<>(name, b2, boolean.class);
-                    break;
-
-                default:
-                    // FallBack there was no match
-
-                    if (value == null) {
-                        throw new ParameterException("The 'value' attribute must exist and must contain a value.");
-                    }
-
-                    try {
-                        //if the type is an Enum then use valueOf()
-                        final Class clazz = Class.forName(type);
-                        if (clazz.isEnum()) {
-                            parameter = new KeyTypedValue<>(name, Enum.valueOf(clazz, value), clazz);
-                        } else {
-                            //default, assume java.lang.String
-                            parameter = new KeyTypedValue<>(name, value, String.class);
-                        }
-
-                    } catch (ClassNotFoundException cnfe) {
-                        throw new ParameterException(String.format("Class for type: %s not found. %s", type, cnfe.getMessage()), cnfe);
-                    }
-                    break;
-            }
+            return new KeyTypedValue<>(name, value, String.class);
         }
 
-        return parameter;
+        return switch (type) {
+            case "java.lang.reflect.Field" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a full class name.");
+                }
+
+                // Use reflection
+                // - retrieve class name from the value field
+                // - retrieve field name from the value field
+                final String clazzName = value.substring(0, value.lastIndexOf('.'));
+                final String fieldName = value.substring(value.lastIndexOf('.') + 1);
+                try {
+                    // Retrieve value from Field
+                    final Class<?> fieldClazz = Class.forName(clazzName);
+                    final Field field = fieldClazz.getField(fieldName);
+                    final Object fValue = field.get(fieldClazz.getDeclaredConstructor().newInstance());
+                    yield new KeyTypedValue<>(name, fValue, Object.class);
+
+                } catch (final NoSuchFieldException | NoSuchFieldError e) {
+                    if (clazzName.contains("lucene") && clazzName.contains("Version")) {
+                        throw new ParameterException("Lucene Version constants (e.g. LUCENE_4_10_4) were removed in Lucene 10. "
+                                + "Use analyzers that do not require a Version parameter.", e);
+                    }
+                    throw new ParameterException(e.getMessage(), e);
+                } catch (final ClassNotFoundException | InstantiationException |
+                               IllegalAccessException | NoSuchMethodException | InvocationTargetException reflectiveOperationException) {
+                    throw new ParameterException(reflectiveOperationException.getMessage(), reflectiveOperationException);
+                }
+            }
+            case "java.io.File" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a file name.");
+                }
+
+                LOG.info("Type '{}' has been deprecated in recent Lucene versions, "
+                        + "please use 'java.io.FileReader' (short 'file') instead.", type);
+
+                yield new KeyTypedValue<>(name, new java.io.File(value), java.io.File.class);
+            }
+            case "java.io.FileReader", "file" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a file name.");
+                }
+
+                try {
+                    // ToDo: check where to close reade to prevent resource leakage
+                    Reader fileReader = new java.io.FileReader(value);
+                    yield new KeyTypedValue<>(name, fileReader, Reader.class);
+
+                } catch (java.io.FileNotFoundException ex) {
+                    LOG.error("File '{}' could not be found.", value, ex);
+                    yield null;
+                }
+            }
+            case "java.util.Set" -> {
+                LOG.info("Type '{}' has been deprecated in recent Lucene versions, "
+                        + "please use 'org.apache.lucene.analysis.CharArraySet' (short 'set') instead.", type);
+
+                final Set<String> s = getConstructorParameterSetValues(param);
+                yield new KeyTypedValue<>(name, s, Set.class);
+            }
+            case "java.lang.String[]" -> {
+                final String[] ary = getConstructorParameterStringArrayValues(param);
+                yield new KeyTypedValue<>(name, ary, String[].class);
+            }
+            case "char[]" -> {
+                final char[] ary = getConstructorParameterCharArrayValues(param);
+                yield new KeyTypedValue<>(name, ary, char[].class);
+            }
+            case "org.apache.lucene.analysis.util.CharArraySet", "org.apache.lucene.analysis.CharArraySet", "set" -> {
+                // This is mandatory to use instead of a normal Set since Lucene 4
+                final CharArraySet s = getConstructorParameterCharArraySetValues(param);
+                yield new KeyTypedValue<>(name, s, CharArraySet.class);
+            }
+            case "java.lang.Integer" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain an integer value.");
+                }
+                try {
+                    final Integer n = Integer.parseInt(value);
+                    yield new KeyTypedValue<>(name, n, Integer.class);
+                } catch (final NumberFormatException ex) {
+                    LOG.error("Value {} could not be converted to an integer. {}", value, ex.getMessage());
+                    yield null;
+                }
+            }
+            case "int" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain an int value.");
+                }
+                try {
+                    final Integer n = Integer.parseInt(value);
+                    yield new KeyTypedValue<>(name, n, int.class);
+                } catch (final NumberFormatException ex) {
+                    LOG.error("Value {} could not be converted to an int. {}", value, ex.getMessage());
+                    yield null;
+                }
+            }
+            case "java.lang.Boolean" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a Boolean value.");
+                }
+                final Boolean b1 = Boolean.parseBoolean(value);
+                yield new KeyTypedValue<>(name, b1, Boolean.class);
+            }
+            case "boolean" -> {
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a boolean value.");
+                }
+                final Boolean b2 = Boolean.parseBoolean(value);
+                yield new KeyTypedValue<>(name, b2, boolean.class);
+            }
+            default -> {
+                // FallBack there was no match
+                if (value.isEmpty()) {
+                    throw new ParameterException("The 'value' attribute must exist and must contain a value.");
+                }
+
+                try {
+                    //if the type is an Enum then use valueOf()
+                    final Class clazz = Class.forName(type);
+                    if (clazz.isEnum()) {
+                        yield new KeyTypedValue<>(name, Enum.valueOf(clazz, value), clazz);
+                    }
+                    //default, assume java.lang.String
+                    yield new KeyTypedValue<>(name, value, String.class);
+                } catch (ClassNotFoundException cnfe) {
+                    throw new ParameterException("Class for type: %s not found. %s".formatted(type, cnfe.getMessage()), cnfe);
+                }
+            }
+        };
     }
 
     /**
@@ -529,7 +399,7 @@ public class AnalyzerConfig {
      * @param param The parameter-configuration element.
      * @return Set of parameter values
      */
-    private static Set<String> getConstructorParameterSetValues(Element param) {
+    private static Set<String> getConstructorParameterSetValues(final Element param) {
         final Set<String> set = new HashSet<>();
         final NodeList values = param.getElementsByTagNameNS(CollectionConfiguration.NAMESPACE, PARAM_VALUE_ENTRY);
         for (int i = 0; i < values.getLength(); i++) {
@@ -546,7 +416,7 @@ public class AnalyzerConfig {
      * @param param The parameter-configuration element.
      * @return Parameter data as String[]
      */
-    private static String[] getConstructorParameterStringArrayValues(final Element param) throws ParameterException {
+    private static String[] getConstructorParameterStringArrayValues(final Element param) {
         final NodeList values = param.getElementsByTagNameNS(CollectionConfiguration.NAMESPACE, PARAM_VALUE_ENTRY);
         final String[] ary = new String[values.getLength()];
         for (int i = 0; i < values.getLength(); i++) {
@@ -582,17 +452,59 @@ public class AnalyzerConfig {
      * @param param The parameter-configuration element.
      * @return Parameter data as Lucene CharArraySet
      */
-    private static CharArraySet getConstructorParameterCharArraySetValues(Element param) {
+    private static CharArraySet getConstructorParameterCharArraySetValues(final Element param) {
         final Set<String> set = getConstructorParameterSetValues(param);
-        return CharArraySet.copy(LuceneIndex.LUCENE_VERSION_IN_USE, set);
+        return CharArraySet.copy(set);
+    }
+
+    public Analyzer getAnalyzerById(final String id) {
+        return analyzers.get(id);
+    }
+
+    public Analyzer getDefaultAnalyzer() {
+        return defaultAnalyzer;
     }
 
     /**
-         * CLass for containing the Triple : key (name), corresponding value and
-         * class type of value.
-         */
-        record KeyTypedValue<T>(String key, T value, Class<T> valueClass) {
+     * Set default the analyzer.
+     *
+     * @param analyzer Lucene analyzer
+     */
+    public void setDefaultAnalyzer(final Analyzer analyzer) {
+        defaultAnalyzer = analyzer;
+    }
 
+    /**
+     * Parse {@code <analyzer/>} element and register configured analyzer.
+     *
+     * @param config The analyzer element from .xconf file.
+     * @throws DatabaseConfigurationException Something unexpected happened.
+     */
+    public void addAnalyzer(final Element config) throws DatabaseConfigurationException {
+
+        // Configure lucene analyzer with configuration
+        final Analyzer analyzer = configureAnalyzer(config);
+        if (analyzer == null) {
+            return;
+        }
+
+        // Get (optional) id-attribute of analyzer
+        final String id = config.getAttribute(ID_ATTRIBUTE);
+
+        // If no ID is provided, register as default analyzer
+        // else register analyzer
+        if (id.isBlank()) {
+            setDefaultAnalyzer(analyzer);
+        } else {
+            analyzers.put(id, analyzer);
+        }
+    }
+
+    /**
+     * CLass for containing the Triple : key (name), corresponding value and
+     * class type of value.
+     */
+    record KeyTypedValue<T>(String key, T value, Class<T> valueClass) {
     }
 
     /**
@@ -600,6 +512,7 @@ public class AnalyzerConfig {
      */
     static class ParameterException extends Exception {
 
+        @Serial
         private static final long serialVersionUID = -4823392401966008877L;
 
         public ParameterException(String message) {
